项目初始化完成

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,1 +1,10 @@
 // 全局样式
+.page-nav-bar {
+  background-color: #3296fa;
+  .van-nav-bar__title{
+    color: #fff;
+  }
+}
+
+// 加载图标样式
+@import "./icon.less";
